# kinglish-say

./: .gitignore  Cargo.toml  README.md  build.rs
acknowledgements/: README.md  licenses.csv
icon/: person_with_a_hearty_appetite.xcf
icon/mac/: person-with-a-hearty-appetite_but_white.xcf  person-with-a-hearty-appetite_with_square.xcf
icon/other/: person-with-a-hearty-appetite_with_square.xcf
locales/: en.yml  ja.yml
release/: archive.sh  build_for_macos.sh  copy_executable.sh  copy_misc.sh  readme.txt
src/: config.rs  main.rs
