[package]
name = "kinglish"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
description = "迅速に喋り方を知るための道具、ゥ。"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://tasuren.jp/works/kinglish/"
repository = "https://github.com/tasuren/kinglish"
keywords = ["application", "speek", "pronunciation"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-item = "0.8.0"
rfd = "0.11.4"
rust-i18n = "2.1.0"
serde = { version = "1.0.175", features = ["derive"] }
directories = "5.0.1"
toml = "0.7.6"
opener = "0.6.1"
global-hotkey = "0.2.3"
smallvec = { version = "1.11.0", features = ["serde"] }
arboard = "3.2.0"
