[package]
name = "kinglish-say"
version = "0.1.2"
edition = "2021"
rust-version = "1.71.0"
build = "build.rs"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
description = "迅速に喋り方を知るための道具、ゥ。"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://tasuren.jp/works/kinglish-say/"
repository = "https://github.com/tasuren/kinglish-say"
keywords = ["application", "speek", "pronunciation"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tao = { version = "0.21.1", features = ["tray"] }
rfd = "0.11.4"
rust-i18n = "2.2.1"
serde = { version = "1.0.188", features = ["derive"] }
directories = "5.0.1"
toml = "0.8.2"
opener = "0.6.1"
global-hotkey = "0.3.0"
smallvec = { version = "1.11.1", features = ["serde"] }
arboard = "3.2.1"

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.4.1"

[build-dependencies]
image = "0.24.7"

[target.'cfg(target_os="windows")'.build-dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tauri-winres = "0.1"

[package.metadata.tauri-winres]
OriginalFilename = "kinglish_say.exe"
LegalCopyright = "(c) Takagi Tasuku 2023"

[package.metadata.bundle]
identifier = "jp.tasuren.kinglish-say"
icon = ["icon/mac/main.png"]
copyright = "(c) 2023 Takagi Tasuku"
category = "public.app-category.education"
